# modi-speech-scrapper

./: .gitignore  .pre-commit-config.yaml  MIT-LICENSE.txt  README.md  pyproject.toml  scrapper.py  setup.cfg
.github/workflows/: speech-scrapper.yml
data/: dataset-metadata.json
