[tool.poetry]
name = "modi_speech_scrapper"
version = "0.1.0"
description = ""
authors = ["Adiamaan <mak.adi55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
lxml = "^4.7.1"
pandas = "^1.3.5"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
